add details navigation, hero styles

--- a/src/components/Hero/Hero.module.css
+++ b/src/components/Hero/Hero.module.css
@@ -1,34 +1,22 @@
 .hero{
 height: 100vh;
-    /* Висота секції на весь екран */
     background-image: url('../../images/Home.jpg');
-    /* Шлях до вашої картинки */
     background-size: cover;
-    /* Масштабує картинку, щоб повністю заповнити секцію */
     background-position: center;
-    /* Центрує картинку */
     background-repeat: no-repeat;
-    /* Запобігає повторенню картинки */
     display: flex;
-    /* Використовуємо для вирівнювання контенту всередині */
     justify-content: center;
-    /* Центр по горизонталі */
     align-items: center;
-    /* Центр по вертикалі */
     color: white;
-    /* Білий текст */
     text-align: center;
+
 }
 
-.heroContent{
-max-width: 600px;
-    /* Обмежуємо ширину контенту */
-    padding: 20px;
-    /* Відступи всередині для красивого вигляду */
+.heroContainer{
+    padding: 64px;
 }
 
 .heroTitle{
-/* H1 */
     color: rgb(247, 247, 247);
     font-family: Inter;
     font-size: 48px;
@@ -36,10 +24,10 @@ max-width: 600px;
     line-height: 32px;
     letter-spacing: 0%;
     text-align: left;
+    margin-bottom: 16px;
 }
 
 .heroCaption{
-/* H2 */
     color: rgb(247, 247, 247);
     font-family: Inter;
     font-size: 24px;
@@ -47,14 +35,13 @@ max-width: 600px;
     line-height: 32px;
     letter-spacing: 0%;
     text-align: left;
+    margin-bottom: 40px;
 }
 
 .heroButton{
-    /* Button */
         position: static;
-        width: 173px;
+        width: 200px;
         height: 56px;
-        /* Auto layout */
         display: flex;
         flex-direction: row;
         justify-content: center;
@@ -63,7 +50,6 @@ max-width: 600px;
         padding: 16px 60px 16px 60px;
     
     
-        /* Inside Auto Layout */
         flex: none;
         order: 1;
         flex-grow: 0;
@@ -71,6 +57,5 @@ max-width: 600px;
 
         border-radius: 200px;
         
-            /* Button */
             background: rgb(228, 72, 72);
 }
