--- a/src/components/Catalog/Filters/Filters.module.css
+++ b/src/components/Catalog/Filters/Filters.module.css
@@ -42,7 +42,9 @@
     display: flex;
     align-items: center;
     gap: 12px;
-    margin-bottom: 12px;
+    margin-bottom: 48px;
+    width: 360px;
+    flex-wrap: wrap;
 }
 
 .searchButton{
