--- a/src/components/Hero/Hero.module.css
+++ b/src/components/Hero/Hero.module.css
@@ -1,11 +1,15 @@
-.hero{
-height: 100vh;
-    background-image: url('../../images/Home.jpg');
-    background-size: cover;
+.background{
+background-image: url('../../images/Home.jpg');
+background-size: cover;
     background-position: center;
     background-repeat: no-repeat;
+}
+.hero{
+height: 100vh;
+  
+    
     display: flex;
-    justify-content: center;
+    /* justify-content: center; */
     align-items: center;
     color: white;
     text-align: center;
