--- a/src/components/Catalog/Filters/Filters.module.css
+++ b/src/components/Catalog/Filters/Filters.module.css
@@ -34,7 +34,20 @@
                 height: 96px;
 }
 
-.filtersIcon:hover{
+.filtersIconActive{
+    border: 1px solid rgb(228, 72, 72);
+            border-radius: 12px;
+                font-family: Inter;
+                font-size: 16px;
+                font-weight: 500;
+                line-height: 24px;
+                letter-spacing: -0.5%;
+                text-align: center;
+                width: 112px;
+                height: 96px;
+}
+
+.filtersIcon:focus{
     border: 1px solid rgb(228, 72, 72);
 }
 
