--- a/src/index.css
+++ b/src/index.css
@@ -10,7 +10,6 @@ body {
 
 button {
   border-radius: 8px;
-  border: 1px solid transparent;
   padding: 0.6em 1.2em;
   font-size: 1em;
   font-weight: 500;
@@ -19,10 +18,10 @@ button {
   transition: border-color 0.25s;
 }
 
-button:focus,
-button:focus-visible {
+/* button:focus, */
+/* button:focus-visible {
   outline: 4px auto -webkit-focus-ring-color;
-}
+} */
 
 html,
 body,
