add location filter

--- a/src/components/Catalog/Filters/Filters.module.css
+++ b/src/components/Catalog/Filters/Filters.module.css
@@ -32,6 +32,7 @@
             text-align: center;
             width: 112px;
                 height: 96px;
+                background-color: white;
 }
 
 .filtersIconActive{
@@ -45,6 +46,7 @@
                 text-align: center;
                 width: 112px;
                 height: 96px;
+                background-color: white;
 }
 
 
