--- a/src/components/Catalog/Truck/TruckInfo/TruckInfo.module.css
+++ b/src/components/Catalog/Truck/TruckInfo/TruckInfo.module.css
@@ -67,6 +67,7 @@
             padding-right: 64px;
             margin-left: auto;
             margin-right: auto;
+            padding-top: 48px;
 }
 
 .navFormContainer{
