--- a/src/index.css
+++ b/src/index.css
@@ -1,12 +1,9 @@
 body {
   width: 100%;
-    max-width: 1440px;
-    margin: 0 auto;
-    box-sizing: border-box;
+  margin: 0 auto;
+  box-sizing: border-box;
   min-height: 100vh;
 }
-
-
 
 button {
   border-radius: 8px;
@@ -16,12 +13,8 @@ button {
   font-family: inherit;
   cursor: pointer;
   transition: border-color 0.25s;
+  border: none;
 }
-
-/* button:focus, */
-/* button:focus-visible {
-  outline: 4px auto -webkit-focus-ring-color;
-} */
 
 html,
 body,
@@ -145,7 +138,7 @@ blockquote:before,
 blockquote:after,
 q:before,
 q:after {
-  content: '';
+  content: "";
   content: none;
 }
 
